# image_compressor

./: CMakeLists.txt  package.xml
config/: compressor_params.yaml  publisher_params.yaml
include/binary_image_compressor/compressor/: BinaryImageCompressor.h  DictionaryBuilder.h  PatternEncoder.h
include/binary_image_compressor/core/: BinaryImageCompressor.h  BlockProcessor.h
include/binary_image_compressor/io/: FileSystem.h  ImageIO.h  ImageProcessor.h  ImageReader.h  PgmImageReader.h  YamlImageReader.h
include/binary_image_compressor/model/: BinaryPattern.h  BlockSizeResult.h  ImageHeader.h
include/binary_image_compressor/ros/: CompressedImagePublisher.h  CompressedImageViewer.h
launch/: compress_and_view.launch.py  compression_system.launch.py  compressor.launch.py  publisher.launch.py  viewer.launch.py
map/: Building2_19thfloor.pgm  mile1_2_50.yaml  sample.pgm  sim.pgm  sim_bw.pgm
msg/: CompressedBinaryImage.msg
src/: BinaryImageCompressor.cpp  BlockProcessor.cpp  DictionaryBuilder.cpp  ImageIO.cpp  PatternEncoder.cpp  binary_image_compressor_node.cpp  compressed_image_publisher.cpp  compressed_image_viewer.cpp  main.cpp
src/core/: BinaryImageCompressor.cpp  BlockProcessor.cpp  DictionaryBuilder.cpp  PatternEncoder.cpp
src/io/: FileSystem.cpp  ImageIO.cpp  ImageProcessor.cpp  ImageReader.cpp  PgmImageReader.cpp  YamlImageReader.cpp
src/model/: BinaryPattern.cpp  BlockSizeResult.cpp
src/ros/: binary_image_compressor_node.cpp  compressed_image_publisher.cpp  compressed_image_viewer.cpp
